--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,11 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+body{
+    width: auto;
+}
 
-    /* Section geral*/
+    /* Section geral Topo*/
 section{
     position: relative;
     width: 100%;
@@ -19,6 +22,8 @@ section{
     align-items: center;
     padding: 100px 150px;
 }
+
+
     /* Menu*/
 section header{
     position: absolute;
@@ -31,6 +36,8 @@ section header{
     align-items: center;
     z-index: 10;
 }
+
+
     /* Menu logomarca*/
 section header .logo{
     position: relative;
@@ -42,20 +49,24 @@ section header .logo{
     letter-spacing: 1px;
     z-index: 10;
 }
+section header .logo:hover{
+    color: #2273ec;
+    transition: 0.5s;
+}
+
+
     /* Menu itens*/
 header ul{
     position: relative;
     display: flex;
     z-index: 10;  
     list-style: none; 
-    
 }
 header ul li a{
     color: #fff;
     font-size: 1.0em;
     font-weight: 700;
-    text-decoration: none;
-    
+    text-decoration: none;    
 }
 
     /* Menu toggle*/
@@ -75,6 +86,8 @@ header .menu{
     object-fit: cover;
     background-position: center;
 }
+
+
     /* Imagem mulher universitária*/
 .woman{
     position: absolute;
@@ -118,6 +131,8 @@ header .menu{
     letter-spacing: 2px;
     border-radius: 20px;
 }
+
+
     /* Ícones */
 .icons{
     position: absolute;
@@ -157,6 +172,8 @@ header .menu{
 .icons .twitter{
     color: #1B61E3;
 }
+
+
     /* Seção cards*/
 .textBlocks{
     position: absolute;
@@ -179,9 +196,93 @@ header .menu{
 .textBlocks .block p{
     color: #fff;
 }
-    /* Main*/
-.form{
-    background-color: #fff;
+    /* Seção de Quem somos */
+.quemSomos{
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    padding: 100px 150px;
+}
+.titleQuemSomos{
+    position: absolute;
+    top:10px;
+    left: 25%;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10px;
+    
+}
+.quemSomos h3{
+    top: 100px;
+    left: -20px;
+    position: relative;
+    font-size: 2em;
+    color: #ffaf00;
+    font-weight: 600;
+    
+}
+.quemSomos p{
+    position: relative;
+    top: 0;
+    font-weight: 400;
+    justify-content: center;
+    align-items: center;
+}
+.quemSomos .titleQuemSomos img{
+    max-width: 150px;
+    border-radius: 100px;
+}
+.quemSomos .man-2 img{
+    max-width: 500px;
+}
+   /* Seção Formulário*/
+.contact{
+    top: 50px;
+}
+.contact img{
+    max-width: 500px;
+    margin-top: 25px;
+}
+.contact h2{
+    position: absolute;
+    top: 10px;
+    right: 40%;
+    font-size: 2em;
+    font-weight: 600;
+    color:#0041a4;
+}
+.contactForm{
+    position: relative;
+    left: 100px;
+    padding: 75px 50px;
+    background: #fff;
+    box-shadow: 0 15px 50px #0041a4;
+    max-width: 500px;
+    margin-top: 50px;
+}
+.contactForm h3{
+    color: #111;
+    font-size: 1.2em;
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+.contactForm .inputBox{
+    position: relative;
+    width: 100%;
+    margin-bottom: 20px;
+}
+.contactForm .inputBox textarea,
+.contactForm .inputBox input{
+
+    width: 100%;
+    border: 1px solidi #555;
+    color: #111;
+    outline: none;
+    font-size: 16px;
+    font-weight: 300;
 }
 
     /* Footer*/
@@ -195,4 +296,20 @@ footer .footer{
     padding: 3px;
     background-color: DarkSalmon;
     color: white;
+}
+/* Estilização de erros */
+#erro{
+    color: #e74c3c;
+    position: relative;
+    font-size: 14px;
+    margin-top: 5px;
+}
+#sucess{
+    color: green;
+    position: relative;
+    font-size: 14px;
+    margin-top: 5px;
+}
+.errorInput{
+    border: 2px solid #e74c3c;
 }
