--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ header .menu{
 .quemSomos{
     position: relative;
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -208,7 +208,7 @@ header .menu{
 }
 .titleQuemSomos{
     position: absolute;
-    top:10px;
+    top:50px;
     left: 25%;
     justify-content: center;
     align-items: center;
@@ -296,6 +296,42 @@ footer .footer{
     padding: 3px;
     background-color: DarkSalmon;
     color: white;
+}
+    /* Algumas resposividades */
+@media (max-width :1086px){
+.woman{
+    display: none;
+}
+.contact img{
+    display: none;
+}
+.contact{
+    align-items: center;
+}
+@media (max-width :975px){
+.quemSomos .man-2 img{
+        display: none;
+    }
+.quemSomos{
+    height: 70vh;
+}
+}
+@media (max-width :880px){
+.content h2 span{
+    font-size: 2em;
+}
+}
+@media (max-width :880px){
+    .content h2 span{
+        font-size: 1.5em;
+}
+}
+@media (max-width :687px){
+.content p{
+    display: none;    
+}
+}
+
 }
 /* Estilização de erros */
 #erro{
